OtoLauncher: Add features and fix bug
Change the code about move, delete or copy file from the java version to
the command line version.

Add hotkey shift+delete to directly delete files.

Fix bug about moving or copying files to any folder, when meet the same
name, rename it automatically in orignal schedule.

clean up code

Signed-off-by: Wang Zhixu <potatomagic@163.com>
Signed-off-by: Chen Gang <chengang@emindsoft.com.cn>